LWCLearnwithFLOWOrg/force-app/main/default/objects/ATC__c/ATC__c.object-meta.xml
<CustomObject>
    <label>ATC</label>
    <nameField>
        <label>ATC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>