LWCLearnwithFLOWOrg/force-app/main/default/objects/ATC__c/fields/ATC_User__c.field-meta.xml
<CustomField>
    <fullName>ATC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATC User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATCs_del</relationshipName>
    <type>Lookup</type>
</CustomField>