LWCLearnwithFLOWOrg/force-app/main/default/objects/ATC__c/fields/Pod__c.field-meta.xml
<CustomField>
    <fullName>Pod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pod</label>
    <referenceTo>Pod__c</referenceTo>
    <relationshipLabel>ATCs</relationshipLabel>
    <relationshipName>ATCs</relationshipName>
    <type>Lookup</type>
</CustomField>