LWCLearnwithFLOWOrg/force-app/main/default/objects/ATC__c/fields/Senior_ATC__c.field-meta.xml
<CustomField>
    <fullName>Senior_ATC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior ATC</label>
    <type>Checkbox</type>
</CustomField>